# lje-ffi

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: docs.yml  release.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/api/: callback.json  disasm.json  mem.json  module.json  struct.json  vtable.json
docs/content/: installation.md  intro.mdx
docs/content/api/: call.mdx  callback.mdx  detour.mdx  disasm.mdx  hook.mdx  mem.mdx  module.mdx  struct.mdx  tcc.mdx  vtable.mdx
docs/content/guides/: quickstart.md
docs/src/components/: NamespaceDocs.jsx  NamespaceDocs.module.css
docs/src/css/: custom.css
docs/static/api/: call.json  detour.json  hook.json  tcc.json
examples/: chaos.lua  overlay.lua  window.lua
src/: globals.hpp  main.cpp  tcc_bundle.rc.in  version.h.in
src/api/: call.cpp  call.hpp  callback.cpp  callback.hpp  detour.cpp  detour.hpp  disasm.cpp  disasm.hpp  ffi-helpers.hpp  hook.cpp  hook.hpp  mem.cpp  mem.hpp  module.cpp  module.hpp  struct.cpp  struct.hpp  tcc.cpp  tcc.hpp  vtable.cpp  vtable.hpp
src/util/: call-auth.hpp  memscan.cpp  memscan.hpp  minhook-shared.cpp  minhook-shared.hpp  module.hpp  sigmask.cpp  sigmask.hpp  sigscan.cpp  sigscan.hpp  watchdog.cpp  watchdog.hpp
